2016-09-06  Natalia Portillo  <claunia@claunia.com>

	* OffsetStream.cs: Corrected OffsetStream arithmetic bug.

2016-09-05  Natalia Portillo  <claunia@claunia.com>

	* AppleDouble.cs:
	* AppleSingle.cs:
	* DiscImageChef.Filters.csproj: Added AppleSingle and
	AppleDouble filters.

2016-09-05  Natalia Portillo  <claunia@claunia.com>

	* GZip.cs:
	* Filter.cs:
	* Filters.cs:
	* ZZZNoFilter.cs:
	* OffsetStream.cs:
	* ForcedSeekStream.cs:
	* AssemblyInfo.cs:
	* DiscImageChef.Filters.csproj: Added filters.
